tests/semantic/valid/shadow_restore.mc
int x = 1;
{
    float x = 2.0;
    x = 3.0;
    print x;
}
x = 4;
print x;
