tests/semantic/invalid/redeclaration.mc
int value = 1;
float value = 2.0;
value = 3;
